--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.0",
+    "@tailwindcss/forms": "0.5.7",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "7.2.0",
