--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "format": "prettier --write \"**/*.{ts,js,scss,css,html,md,json}\"",
     "test": "ng test",
-    "lint": "ng lint --fix"
+    "lint": "ng lint --fix",
+    "analyze": "ng build && source-map-explorer dist/**/*.js"
   },
   "private": true,
   "dependencies": {
@@ -53,6 +54,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
+    "source-map-explorer": "2.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.2"
   }
